RESOLVED FIXED174093
[GLib] Incorrect <glib/gi18n.h> include in WebKitWebsiteData
https://bugs.webkit.org/show_bug.cgi?id=174093
Summary [GLib] Incorrect <glib/gi18n.h> include in WebKitWebsiteData
Zan Dobersek
Reported 2017-07-03 05:05:33 PDT
[GLib] Incorrect <glib/gi18n.h> include in WebKitWebsiteData
Attachments
Patch (1.37 KB, patch)
2017-07-03 05:09 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-07-03 05:09:58 PDT
Build Bot
Comment 2 2017-07-03 05:12:23 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Zan Dobersek
Comment 3 2017-07-05 07:05:50 PDT
Comment on attachment 314476 [details] Patch Clearing flags on attachment: 314476 Committed r219126: <http://trac.webkit.org/changeset/219126>
Zan Dobersek
Comment 4 2017-07-05 07:05:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.