[GLib] Incorrect <glib/gi18n.h> include in WebKitWebsiteData https://bugs.webkit.org/show_bug.cgi?id=174093

Reviewed by Michael Catanzaro.

* UIProcess/API/glib/WebKitWebsiteData.cpp: Include <glib/gi18n-lib.h>
rather than <glib/gi18n.h>, since the former has to be included in a
library while the latter should only be included in a standalone application.


Canonical link: https://commits.webkit.org/190978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219126 268f45cc-cd09-0410-ab3c-d52691b4dbfc